Add Product and Rating components and Bootstrap applied

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,12 +7,20 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.site-container {
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
-header {
+/* header {
   background-color: #404040;
   padding: 1rem;
 }
@@ -21,15 +29,24 @@ header a {
   color:#fff;
   font-weight: bold;
   text-decoration: none;
-}
+} */
 
 main {
   padding: 1rem;
+}
+
+.btn-primary {
+  background-color: #f0c040;
+  color: black;
 }
 .products {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+.rating span {
+  color: #ffc000;
 }
 
 .product {
